...

export const STEP1_SUB_STEP_TO_TARGET: Record<
  SubStepOfStep1,
  string | string[] | null
> = {
  '1.1': null,
  '1.2': 'meal-camera-button',
  '1.3': null,
  '1.4': null,
  '1.5': ['meal-result-dish-name', 'meal-result-calories'],
  '1.6': 'meal-save-button',
  '1.7': null,
};
...
